--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assets/images/title-icon.png" type="image/png">
-    <link rel="stylesheet" href="assets/CSS/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Google Search- Clone</title>
 </head>
 
@@ -15,7 +15,7 @@
         <ul>
             <li><a href="https://mail.google.com">Gmail</a></li>
             <li><a href="">Images</a></li>
-            <li><img src="assets/images/dots-menu.png" alt="" id="menu-icons"></li>
+            <li><img src="images/dots-menu.png" alt="" id="menu-icons"></li>
             <li><a href="#" id="sign-in-btn">Sign In</a></li>
         </ul>
     </header>
@@ -23,13 +23,13 @@
     <section>
         <form action="https://www.google.com/search">
             <div class="doodle-div">
-                <img src="assets/images/google-logo.png" alt="">
+                <img src="images/google-logo.png" alt="">
             </div>
             <div class="searchdiv">
-                <img src="assets/images/search-solid.svg" alt="" id="searchicon">
+                <img src="images/search-solid.svg" alt="" id="searchicon">
                 <input type="text" placeholder="Search Google or type URL" name="q">
-                <img src="assets/images/google-voice.png" alt="" class="lens-voice-icon">
-                <img src="assets/images/google-lens.png" alt="" class="lens-voice-icon">
+                <img src="images/google-voice.png" alt="" class="lens-voice-icon">
+                <img src="images/google-lens.png" alt="" class="lens-voice-icon">
             </div>
             <div class="buttondiv">
                 <button type="submit">Google Search</button>
